--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
-    "vue": "^3.5.13"
+    "v-money": "^0.8.1",
+    "v-money3": "^3.24.1",
+    "vue": "^3.5.13",
+    "vue-currency-input": "^3.2.1",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
